exports[`ButtonText overrides if signed in and override 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Give Later
   
  <span
    className="icon-lock" />
</button>
`;

exports[`ButtonText says \`Give Now\` if signed in and no override 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Review Contribution
   
  <span
    className="icon-lock" />
</button>
`;

exports[`ButtonText says \`Review Your Gift\` if signed in 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Review Contribution
   
  <span
    className="icon-lock" />
</button>
`;

exports[`ButtonText says \`Sign In\` if not userId 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton has default styles when disabled but not logged in 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton has disabled style when disabled and logged in 1`] = `
<button
  className="btn btn--disabled"
  data-id={undefined}
  disabled={true}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Review Contribution
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton has enabled styles when enabled 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton overrides classes with theme if theme 1`] = `
<button
  className="my cool theme"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton passes a style object 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={
    Object {
      "background": "red",
    }
  }
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton passes a value 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value="test">
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton passes the onClick function 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={[Function]}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`PrimaryButton renders with minimum props 1`] = `
<button
  className="btn"
  data-id={undefined}
  disabled={undefined}
  onClick={undefined}
  style={undefined}
  value={undefined}>
  Sign In
   
  <span
    className="icon-lock" />
</button>
`;

exports[`buttonClasses has additionalClasses if passed 1`] = `"btn additional class names"`;

exports[`buttonClasses has btn at least 1`] = `"btn"`;

exports[`buttonClasses has btn--disabled if disabled and userId 1`] = `"btn btn--disabled"`;

exports[`buttonClasses has has-card if saved payments 1`] = `"btn has-card"`;
